--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link href="style.css" rel="stylesheet">
-		<title>Java Mentor List Repositories</title>
+		<title>Document</title>
 		<script src="script.js" defer></script>
 	</head>
 
